Fixes and leans up how it works css, switches to more legible roboto font

--- a/app/assets/stylesheets/custom2.css
+++ b/app/assets/stylesheets/custom2.css
@@ -5088,58 +5088,32 @@ aside textarea {
   height: 35px;
   margin-bottom: 5px; }
 
+/* how it works page */
+
 #how-page-header {
 	text-align: center;
+  font-size: 60px;
 	padding-top: 50px;
 	padding-bottom: 60px;
 }
 
-#how-it-works-pics {
-	float:left;
-	width: 25%
+#how-blurb-header {
+	
+  text-align: left;
+  margin-left: 50px;
 }
 
-#how-it-works-pics img{
-	margin-top: 50px;
-	margin-bottom: 50px;
+#how-blurb {
+  font-size: 17px;
+  text-align: left;
+  margin-left: 50px;
 }
 
-#how-it-works-text {
-	float:right;
-	width: 75%;
-}
-
-#how-it-works-text h1 {
-	font-size: 30px;
-	text-align: left;
-	margin-bottom: 45px;
-	margin-top: 100px;
-	margin-left: 50px;
-}
-
-#how-it-works-text p {
-	text-align: left;
-	margin-left: 50px;
-}
-#how-search {
-	margin-top:-50px;
-}
-
-#how-customize {
-	margin-top: 225px;
-}
-
-#how-match {
-	margin-top: 200px;
-}
-
-#how-enjoy {
-	margin-top: 145px;
-}
-
+/* matchcenter page */
 
 #matchcenter-text {
   font-size: 25px;
   font-family: 'Roboto', sans-serif;
 }
+
 
